--- a/assets/src/scss/layout/admin/builder/_builder_style.scss
+++ b/assets/src/scss/layout/admin/builder/_builder_style.scss
@@ -2173,10 +2173,7 @@ input[type="radio"].cptm-radio {
   .directorist-type-icon-select {
     margin-bottom: 20px;
     .icon-picker-selector {
-      display: block;
-      .icon-picker-selector__btn {
-        margin-top: 10px;
-      }
+      display: flex;
     }
   }
 }
